z-index fixes; changed body background color to match feature image

--- a/dev/home/home.css
+++ b/dev/home/home.css
@@ -1,6 +1,6 @@
 body,
 #header,
-#footer {background-color:#031123;}
+#footer {background-color:#041124;}
 
 #header {height: 50px;color:#FFF;position:relative;}
 #header .title {position:static;}
@@ -10,6 +10,7 @@ body,
 #header .row .span12 .row { position:relative; z-index:9999; }
 
 #featured_story { position:relative; top:-50px; }
+#featured_story a { display:block; }
 
 #footer_stories { padding: 0 0 30px 0; }
 #footer_stories h2 {color:#FFF;}
